syntax = "proto3";

package Rohel;

message Request {
  int32 id = 1;
  string operator = 2;
  int32 originator = 3;
  string client = 4;
  string from_city = 5;
  string from_address = 6;
  string to_city = 7;
  string to_address = 8;
  uint64 loading_date = 9;
  uint64 unloading_date = 10;
  string description = 11;
  string collies = 12;
  float weight = 13;
  float volume = 14;
  float loading_meters = 15;
  float freight = 16;
  string instructions = 17;
  uint64 acceptance = 18;
  uint64 expiration = 19;
  string plate_number = 20;
  string ameta = 21;
  string order_type = 22;
  string adr = 23;
  int32 recipient = 24;
  int32 status = 25;
  int32 accepted_by = 26;
  uint64 creation_date = 27;
  uint64 update_date = 28;
  string dimensions = 29;
}

message RequestUpdates {
  int32 id = 1;
  bool operator = 2;
  bool originator = 3;
  bool client = 4;
  bool from_city = 5;
  bool from_address = 6;
  bool to_city = 7;
  bool to_address = 8;
  bool loading_date = 9;
  bool unloading_date = 10;
  bool description = 11;
  bool collies = 12;
  bool weight = 13;
  bool volume = 14;
  bool loading_meters = 15;
  bool freight = 16;
  bool instructions = 17;
  bool acceptance = 18;
  bool expiration = 19;
  bool plate_number = 20;
  bool ameta = 21;
  bool order_type = 22;
  bool adr = 23;
  bool recipient = 24;
  bool status = 25;
  bool accepted_by = 26;
  string dimensions = 27;
}

message Truck {
  int32 id = 1;
  string operator = 2;
  int32 originator = 3;
  int32 recipient = 4;
  int32 accepted_by = 5;
  int32 status = 6;
  string from_city = 7;
  string from_address = 8;
  uint64 loading_date = 9;
  uint64 unloading_date = 10;
  uint64 availability = 11;
  uint64 acceptance = 12;
  uint64 expiration = 13;
  string details = 14;
  float freight = 15;
  string plate_number = 16;
  string ameta = 17;
  string cargo_type = 19;
  string truck_type = 20;
  string contract_type = 21;
  string adr = 22;
  repeated TruckStop stop = 23;
  uint64 creation_date = 24;
  uint64 update_date = 18;
}

message TruckMatch {
  int32 id = 1;
  string operator = 2;
  int32 status = 3;
  string from_city = 4;
  uint64 availability = 5;
  string plate_number = 6;
  string ameta = 7;
  string order_type = 8;
  string adr = 9;
  uint64 item_date = 10;
  int32 item_id = 11;
  string item_kind = 12;
  float loading_meters = 13;
  float weight = 14;
  float volume = 15;
  string to_city = 16;
  int32 originator_id = 17;
  int32 recipient_id = 18;
}

message TruckUpdates {
  int32 id = 1;
  bool operator = 2;
  bool originator = 3;
  bool recipient = 4;
  bool accepted_by = 5;
  bool status = 6;
  bool from_city = 7;
  bool from_address = 8;
  bool loading_date = 9;
  bool unloading_date = 10;
  bool availability = 11;
  bool acceptance = 12;
  bool expiration = 13;
  bool details = 14;
  bool freight = 15;
  bool plate_number = 16;
  bool ameta = 17;
  bool cargo_type = 19;
  bool truck_type = 20;
  bool contract_type = 21;
  bool adr = 18;
}

message TruckStop {
  int32 id = 1;
  string city = 2;
  string address = 12;
  int32 cmr = 3;
  float loading_meters = 4;
  float weight = 5;
  float volume = 6;
  int32 stop_id = 7;
  int32 truck_id = 8;
  uint64 creation_date = 9;
  uint64 update_date = 10;
  string operator = 11;
}

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
  int32 class = 4;
  int32 insert = 5;
  int32 reports = 6;
  string name = 8;
  string office = 9;
  int32 country_id = 10;
  string country_name = 11;
}

message Notification {
  int32 id = 1;
  string from = 2;
  int32 kind = 3;
  int32 entity_kind = 4;
  int32 entity_id = 5;
  string url = 6;
  int32 user_id = 7;
  int32 originator_id = 8;
  int32 viewed = 9;
}

message CargoNote {
  int32 id = 1;
  int32 cargo_id = 2;
  string note = 3;
}
